Fix for Java 11
Signed-off-by: Tomoyuki Morita <moritato@amazon.com>